HelloUltraviolet/Fixtures/RejectedSource/Statements/UnsafeRequiredOperationOwnershipDiagnostic/Expected.uv
//! Expected diagnostic metadata for the UnsafeRequiredOperationOwnershipDiagnostic rejected-source specimen.

expectedDiagnostic("E-MEM-3030", "diag.18.UnsafeRequiredOperationOwnership")
